Making things work

--- a/MLH-Braintree/Base.lproj/Main.storyboard
+++ b/MLH-Braintree/Base.lproj/Main.storyboard
@@ -1,128 +1,134 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="jIt-hv-vwU">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="7531" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="HTx-fz-PBv">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7520"/>
     </dependencies>
     <scenes>
-        <!--Go away.-->
-        <scene sceneID="ufC-wZ-h7g">
-            <objects>
-                <viewController id="vXZ-lx-hvc" customClass="TutorialViewController" customModule="MLH_Braintree" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="jyV-Pf-zRb"/>
-                        <viewControllerLayoutGuide type="bottom" id="2fi-mo-0CV"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="kh9-bI-dsS">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
-                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
-                    </view>
-                    <navigationItem key="navigationItem" title="Go away." prompt="Why did you enter this page?" id="im9-Kg-4wp">
-                        <barButtonItem key="rightBarButtonItem" title="Next Page" style="done" id="yCy-ge-9G3">
-                            <connections>
-                                <segue destination="pSR-h0-9BU" kind="show" id="fAX-nk-PJ5"/>
-                            </connections>
-                        </barButtonItem>
-                    </navigationItem>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="x5A-6p-PRh" sceneMemberID="firstResponder"/>
-            </objects>
-            <point key="canvasLocation" x="693" y="1103"/>
-        </scene>
         <!--Your Cart-->
-        <scene sceneID="ng5-k3-GNe">
+        <scene sceneID="HdV-iu-Mf5">
             <objects>
-                <viewController title="Your Cart" id="fIG-UT-ooh" customClass="CurrentCartViewController" customModule="MLH_Braintree" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Your Cart" id="nZl-rL-zFZ" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="X2G-fu-Rpf"/>
-                        <viewControllerLayoutGuide type="bottom" id="ZlX-WO-RVC"/>
+                        <viewControllerLayoutGuide type="top" id="gZl-Wy-gt7"/>
+                        <viewControllerLayoutGuide type="bottom" id="k90-AU-m8G"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8rw-ei-8Kq">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <view key="view" contentMode="scaleToFill" id="n5C-Og-Tk0">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="No" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="eMH-VC-S9b">
-                                <rect key="frame" x="61" y="167" width="23" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4ac-8R-iI6">
+                                <rect key="frame" x="0.0" y="64" width="600" height="487"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="k90-AU-m8G" firstAttribute="top" secondItem="4ac-8R-iI6" secondAttribute="bottom" id="522-nH-Mlk"/>
+                            <constraint firstItem="4ac-8R-iI6" firstAttribute="top" secondItem="gZl-Wy-gt7" secondAttribute="bottom" id="7X4-sL-jAx"/>
+                            <constraint firstItem="4ac-8R-iI6" firstAttribute="width" secondItem="n5C-Og-Tk0" secondAttribute="width" id="PHT-2W-lqO"/>
+                            <constraint firstAttribute="centerX" secondItem="4ac-8R-iI6" secondAttribute="centerX" id="jTH-w6-WMh"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Your Cart" id="6EV-LJ-lqd"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <navigationItem key="navigationItem" title="Your Cart" id="zh2-P0-3iz"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="f0I-NI-bX0" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="cXe-Gb-h01" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2333" y="1662"/>
+            <point key="canvasLocation" x="2987" y="2075"/>
         </scene>
         <!--Shop List-->
-        <scene sceneID="iUe-gN-ZhY">
+        <scene sceneID="Id5-Fm-xmI">
             <objects>
-                <viewController title="Shop List" id="51O-FT-N7x" customClass="ShopListViewController" customModule="MLH_Braintree" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController title="Shop List" id="R86-xc-NW6" sceneMemberID="viewController">
                     <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="bPe-NR-w2d"/>
-                        <viewControllerLayoutGuide type="bottom" id="tRC-WN-fEi"/>
+                        <viewControllerLayoutGuide type="top" id="2cx-6B-56l"/>
+                        <viewControllerLayoutGuide type="bottom" id="ZcN-W5-Txa"/>
                     </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="II0-ww-pua">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
+                    <view key="view" contentMode="scaleToFill" id="fh8-e3-ebv">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Yes" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gkM-ef-IMH">
-                                <rect key="frame" x="107" y="129" width="27" height="21"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                            <searchBar contentMode="redraw" placeholder="Search for Items" translatesAutoresizingMaskIntoConstraints="NO" id="faZ-cF-oem">
+                                <rect key="frame" x="0.0" y="64" width="600" height="44"/>
+                                <textInputTraits key="textInputTraits"/>
+                            </searchBar>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dAx-EH-oSI">
+                                <rect key="frame" x="0.0" y="108" width="600" height="443"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                            </tableView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <constraints>
+                            <constraint firstItem="faZ-cF-oem" firstAttribute="width" secondItem="fh8-e3-ebv" secondAttribute="width" id="1cF-T1-kdc"/>
+                            <constraint firstAttribute="centerX" secondItem="dAx-EH-oSI" secondAttribute="centerX" id="6iI-Ro-lpt"/>
+                            <constraint firstAttribute="width" secondItem="dAx-EH-oSI" secondAttribute="width" id="BxQ-Hm-dxU"/>
+                            <constraint firstItem="dAx-EH-oSI" firstAttribute="top" secondItem="faZ-cF-oem" secondAttribute="bottom" id="Euh-I7-9xM"/>
+                            <constraint firstItem="ZcN-W5-Txa" firstAttribute="top" secondItem="dAx-EH-oSI" secondAttribute="bottom" id="MsU-Tc-nBq"/>
+                            <constraint firstAttribute="centerX" secondItem="faZ-cF-oem" secondAttribute="centerX" id="SKj-vr-6Mf"/>
+                            <constraint firstItem="faZ-cF-oem" firstAttribute="top" secondItem="2cx-6B-56l" secondAttribute="bottom" id="oYb-n6-bP3"/>
+                        </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="Shop List" id="RvO-mE-H1J"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
+                    <navigationItem key="navigationItem" title="Shop List" id="tK8-Du-3Dj"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="kaV-7C-vwv" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Fb3-D0-idP" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2339" y="772"/>
+            <point key="canvasLocation" x="2987" y="1413"/>
         </scene>
-        <!--Tab Bar Controller-->
-        <scene sceneID="oZ0-As-rxK">
+        <!--Your Cart / Shop List-->
+        <scene sceneID="ca9-OC-p3h">
             <objects>
-                <tabBarController id="pSR-h0-9BU" sceneMemberID="viewController">
+                <tabBarController title="Your Cart / Shop List" id="HTx-fz-PBv" sceneMemberID="viewController">
                     <nil key="simulatedBottomBarMetrics"/>
-                    <simulatedScreenMetrics key="simulatedDestinationMetrics" type="retina55"/>
-                    <tabBar key="tabBar" contentMode="scaleToFill" id="GBP-If-xjs">
+                    <tabBar key="tabBar" contentMode="scaleToFill" id="K3A-H3-8zl">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                     </tabBar>
                     <connections>
-                        <segue destination="51O-FT-N7x" kind="relationship" relationship="viewControllers" id="rdV-fM-krT"/>
-                        <segue destination="fIG-UT-ooh" kind="relationship" relationship="viewControllers" id="GPG-2Y-tjw"/>
+                        <segue destination="sFA-4v-0DY" kind="relationship" relationship="viewControllers" id="HwF-1h-6zl"/>
+                        <segue destination="wvt-3r-QAk" kind="relationship" relationship="viewControllers" id="BJ9-iz-ykM"/>
                     </connections>
                 </tabBarController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="6Fi-2C-TzP" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0ho-We-Qbl" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1519" y="1103"/>
+            <point key="canvasLocation" x="1355" y="1744"/>
         </scene>
-        <!--Navigation Controller-->
-        <scene sceneID="4Yj-7b-bZA">
+        <!--Shop List Navigation-->
+        <scene sceneID="vKo-6V-dZj">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="jIt-hv-vwU" sceneMemberID="viewController">
+                <navigationController title="Shop List Navigation" automaticallyAdjustsScrollViewInsets="NO" id="sFA-4v-0DY" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Shop List" id="wUz-YF-MRr"/>
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="7Jw-nj-sZ2">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="8AO-9C-Hny">
                         <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="vXZ-lx-hvc" kind="relationship" relationship="rootViewController" id="Ll5-xn-UIi"/>
+                        <segue destination="R86-xc-NW6" kind="relationship" relationship="rootViewController" id="str-Wy-eDS"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="vMV-y5-ZdO" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="IW9-2s-UIc" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-85" y="1103"/>
+            <point key="canvasLocation" x="2175" y="1413"/>
+        </scene>
+        <!--Your Cart Navigation-->
+        <scene sceneID="zbf-oC-n3v">
+            <objects>
+                <navigationController title="Your Cart Navigation" automaticallyAdjustsScrollViewInsets="NO" id="wvt-3r-QAk" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Your Cart" id="UA8-yQ-9YB"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="5bg-tF-QSD">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="nZl-rL-zFZ" kind="relationship" relationship="rootViewController" id="of9-eO-99F"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Z9h-ur-Po6" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="2175" y="2075"/>
         </scene>
     </scenes>
 </document>
