--- a/MLH-Braintree/Base.lproj/Main.storyboard
+++ b/MLH-Braintree/Base.lproj/Main.storyboard
@@ -16,7 +16,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4ac-8R-iI6">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="80" sectionHeaderHeight="1" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="4ac-8R-iI6">
                                 <rect key="frame" x="0.0" y="64" width="600" height="487"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
@@ -25,17 +25,18 @@
                         <constraints>
                             <constraint firstItem="k90-AU-m8G" firstAttribute="top" secondItem="4ac-8R-iI6" secondAttribute="bottom" id="522-nH-Mlk"/>
                             <constraint firstItem="4ac-8R-iI6" firstAttribute="width" secondItem="n5C-Og-Tk0" secondAttribute="width" id="PHT-2W-lqO"/>
-                            <constraint firstItem="4ac-8R-iI6" firstAttribute="top" secondItem="gZl-Wy-gt7" secondAttribute="bottom" id="S0I-oY-kbg"/>
+                            <constraint firstItem="4ac-8R-iI6" firstAttribute="top" secondItem="gZl-Wy-gt7" secondAttribute="bottom" id="VBn-5b-k2v"/>
+                            <constraint firstItem="4ac-8R-iI6" firstAttribute="top" secondItem="gZl-Wy-gt7" secondAttribute="bottom" id="g3H-Yy-dl4"/>
                             <constraint firstAttribute="centerX" secondItem="4ac-8R-iI6" secondAttribute="centerX" id="jTH-w6-WMh"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Your Cart" id="zh2-P0-3iz">
-                        <barButtonItem key="rightBarButtonItem" title="Purchase" id="nMK-Gy-H9p"/>
+                        <barButtonItem key="rightBarButtonItem" title="Buy" id="nMK-Gy-H9p"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="cXe-Gb-h01" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2987" y="2075"/>
+            <point key="canvasLocation" x="2997" y="2075"/>
         </scene>
         <!--Shop List-->
         <scene sceneID="Id5-Fm-xmI">
@@ -49,11 +50,11 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <searchBar contentMode="redraw" placeholder="Search for Items" translatesAutoresizingMaskIntoConstraints="NO" id="faZ-cF-oem">
+                            <searchBar contentMode="redraw" searchBarStyle="minimal" placeholder="Search for Items" translatesAutoresizingMaskIntoConstraints="NO" id="faZ-cF-oem">
                                 <rect key="frame" x="0.0" y="64" width="600" height="44"/>
-                                <textInputTraits key="textInputTraits"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" spellCheckingType="yes"/>
                             </searchBar>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dAx-EH-oSI">
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" keyboardDismissMode="onDrag" dataMode="prototypes" style="plain" separatorStyle="default" allowsMultipleSelection="YES" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="dAx-EH-oSI">
                                 <rect key="frame" x="0.0" y="108" width="600" height="443"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                             </tableView>
@@ -70,7 +71,7 @@
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Shop List" id="tK8-Du-3Dj">
-                        <barButtonItem key="rightBarButtonItem" title="Purchase" id="tEg-fH-duL"/>
+                        <barButtonItem key="rightBarButtonItem" title="Buy" id="tEg-fH-duL"/>
                     </navigationItem>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Fb3-D0-idP" userLabel="First Responder" sceneMemberID="firstResponder"/>
